[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "includes"
version = "0.8.4"
description = "Dynamic include/import helper"
authors = [
  { name="William Martinez Bas", email="metfar@gmail.com" }
]
license = { text = "GPL-2.0-or-later" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://wsmb.net"
